crates/jni-macros/tests/ui/native_method/fail/shorthand_wrong_return_type.stderr
warning: unused import: `jint`
 --> tests/ui/native_method/fail/shorthand_wrong_return_type.rs:4:16
  |
4 | use jni::sys::{jint, jlong};
  |                ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/ui/native_method/fail/shorthand_wrong_return_type.rs:17:19
   |
17 |       let _method = native_method! {
   |  ___________________^
18 | |         fn MyClass::myMethod() -> jint,
19 | |         fn = my_method_impl
20 | |     };
   | |     ^
   | |     |
   | |_____expected `i32`, found `i64`
   |       expected `i32` because of return type
   |
   = note: this error originates in the macro `native_method` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert an `i64` to an `i32` and panic if the converted value doesn't fit
   |
20 |     }.try_into().unwrap();
   |      ++++++++++++++++++++
